--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,14 +1,20 @@
 .nav {
 	grid-area: n;
-	/* background-color: #16b152; */
-	background-color:rgb(23, 160, 64)
+	background-color:rgb(23, 160, 64);
+	padding: 20px;
 }
 
-.item {
+.item a {
 	color:white;
 	font-size: 20px;
 	padding-left: 10px;
+	text-decoration: none;
 }
+
+.item .active{
+	color: gold;
+}
+
 .item :hover{
 	opacity: 0.8;
 	background-color:rgb(23, 160, 64)
