--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app-wrapper {
+  background: linear-gradient(to right, rgba(0,0,0, 0.7) , rgba(0,0,0, 0.7)), url(https://themified.com/friend-finder/images/bg/bg-3.jpg) fixed no-repeat;;
   margin: 0 auto;
   display: grid;
   max-width: 100%;
@@ -7,10 +8,13 @@
     "n c";
   grid-template-rows: 50px 1fr;
   grid-template-columns: 2fr 10fr;
-  grid-gap: 2px;
+  /* grid-gap: 2px; */
+  width: 100%;
+  background-position: center;
 }
 
 .app-wrapper-content {
   grid-area: c;
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
 }
+
