redux и контейнерная компонента

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app-wrapper {
-  background: linear-gradient(to right, rgba(0,0,0, 0.7) , rgba(0,0,0, 0.7)), url(https://themified.com/friend-finder/images/bg/bg-3.jpg) fixed no-repeat;;
+  background-color: #15202B;
   margin: 0 auto;
   display: grid;
   max-width: 100%;
