--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -32,3 +32,8 @@ span {
     display: flex;
     justify-content: space-between;
 }
+
+.selectedPage {
+    font-weight: bold;
+    color: orangered;
+}
