--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,7 +4,6 @@
 	padding: 10px;
 }
 .dialog a{
-	color:white;
 	text-decoration: none;
 }
 
@@ -15,7 +14,7 @@
 
 
 .message{
-	color: white;
+	/*color: white;*/
 }
 
 .buttonMessage{
